--- a/build-SimpleChatApplication-Desktop_Qt_5_12_7_GCC_64bit-Debug/Makefile
+++ b/build-SimpleChatApplication-Desktop_Qt_5_12_7_GCC_64bit-Debug/Makefile
@@ -52,9 +52,15 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../SimpleChatApplication/main.cpp qrc_qml.cpp
+SOURCES       = ../SimpleChatApplication/main.cpp \
+		../SimpleChatApplication/sqlcontactmodel.cpp \
+		../SimpleChatApplication/sqlconversationmodel.cpp qrc_qml.cpp \
+		moc_sqlconversationmodel.cpp
 OBJECTS       = main.o \
-		qrc_qml.o
+		sqlcontactmodel.o \
+		sqlconversationmodel.o \
+		qrc_qml.o \
+		moc_sqlconversationmodel.o
 DIST          = ../../../../Qt/5.12.7/gcc_64/mkspecs/features/spec_pre.prf \
 		../../../../Qt/5.12.7/gcc_64/mkspecs/common/unix.conf \
 		../../../../Qt/5.12.7/gcc_64/mkspecs/common/linux.conf \
@@ -248,7 +254,10 @@ DIST          = ../../../../Qt/5.12.7/gcc_64/mkspecs/features/spec_pre.prf \
 		../../../../Qt/5.12.7/gcc_64/mkspecs/features/exceptions.prf \
 		../../../../Qt/5.12.7/gcc_64/mkspecs/features/yacc.prf \
 		../../../../Qt/5.12.7/gcc_64/mkspecs/features/lex.prf \
-		../SimpleChatApplication/SimpleChatApplication.pro  ../SimpleChatApplication/main.cpp
+		../SimpleChatApplication/SimpleChatApplication.pro ../SimpleChatApplication/sqlcontactmodel.h \
+		../SimpleChatApplication/sqlconversationmodel.h ../SimpleChatApplication/main.cpp \
+		../SimpleChatApplication/sqlcontactmodel.cpp \
+		../SimpleChatApplication/sqlconversationmodel.cpp
 QMAKE_TARGET  = SimpleChatApplication
 DESTDIR       = 
 TARGET        = SimpleChatApplication
@@ -667,7 +676,8 @@ distdir: FORCE
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents ../SimpleChatApplication/qml.qrc $(DISTDIR)/
 	$(COPY_FILE) --parents ../../../../Qt/5.12.7/gcc_64/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../SimpleChatApplication/main.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../SimpleChatApplication/sqlcontactmodel.h ../SimpleChatApplication/sqlconversationmodel.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../SimpleChatApplication/main.cpp ../SimpleChatApplication/sqlcontactmodel.cpp ../SimpleChatApplication/sqlconversationmodel.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -696,6 +706,8 @@ compiler_rcc_clean:
 	-$(DEL_FILE) qrc_qml.cpp
 qrc_qml.cpp: ../SimpleChatApplication/qml.qrc \
 		../../../../Qt/5.12.7/gcc_64/bin/rcc \
+		../SimpleChatApplication/ChatToolBar.qml \
+		../SimpleChatApplication/ConversationPage.qml \
 		../SimpleChatApplication/ContactPage.qml \
 		../SimpleChatApplication/main.qml
 	/home/nicholus/Qt/5.12.7/gcc_64/bin/rcc -name qml ../SimpleChatApplication/qml.qrc -o qrc_qml.cpp
@@ -706,8 +718,14 @@ compiler_moc_predefs_clean:
 moc_predefs.h: ../../../../Qt/5.12.7/gcc_64/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++11 -Wall -W -dM -E -o moc_predefs.h ../../../../Qt/5.12.7/gcc_64/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all:
+compiler_moc_header_make_all: moc_sqlconversationmodel.cpp
 compiler_moc_header_clean:
+	-$(DEL_FILE) moc_sqlconversationmodel.cpp
+moc_sqlconversationmodel.cpp: ../SimpleChatApplication/sqlconversationmodel.h \
+		moc_predefs.h \
+		../../../../Qt/5.12.7/gcc_64/bin/moc
+	/home/nicholus/Qt/5.12.7/gcc_64/bin/moc $(DEFINES) --include /home/nicholus/Desktop/Chat-Application/SimpleChatApplication/build-SimpleChatApplication-Desktop_Qt_5_12_7_GCC_64bit-Debug/moc_predefs.h -I/home/nicholus/Qt/5.12.7/gcc_64/mkspecs/linux-g++ -I/home/nicholus/Desktop/Chat-Application/SimpleChatApplication/SimpleChatApplication -I/home/nicholus/Qt/5.12.7/gcc_64/include -I/home/nicholus/Qt/5.12.7/gcc_64/include/QtQuick -I/home/nicholus/Qt/5.12.7/gcc_64/include/QtGui -I/home/nicholus/Qt/5.12.7/gcc_64/include/QtQml -I/home/nicholus/Qt/5.12.7/gcc_64/include/QtNetwork -I/home/nicholus/Qt/5.12.7/gcc_64/include/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../SimpleChatApplication/sqlconversationmodel.h -o moc_sqlconversationmodel.cpp
+
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
 compiler_moc_source_make_all:
@@ -718,7 +736,7 @@ compiler_yacc_impl_make_all:
 compiler_yacc_impl_clean:
 compiler_lex_make_all:
 compiler_lex_clean:
-compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean 
+compiler_clean: compiler_rcc_clean compiler_moc_predefs_clean compiler_moc_header_clean 
 
 ####### Compile
 
@@ -816,8 +834,147 @@ main.o: ../SimpleChatApplication/main.cpp ../../../../Qt/5.12.7/gcc_64/include/Q
 		../../../../Qt/5.12.7/gcc_64/include/QtQml/qqmlerror.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../SimpleChatApplication/main.cpp
 
+sqlcontactmodel.o: ../SimpleChatApplication/sqlcontactmodel.cpp ../SimpleChatApplication/sqlcontactmodel.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/QDebug \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qdebug.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qalgorithms.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qglobal.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qconfig-bootstrapped.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qconfig.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtcore-config.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsystemdetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qprocessordetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcompilerdetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtypeinfo.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsysinfo.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlogging.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qflags.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbasicatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qgenericatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_cxx11.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_msvc.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qglobalstatic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmutex.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qnumeric.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qversiontagging.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qhash.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qchar.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qiterator.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qrefcount.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qarraydata.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qhashfunctions.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstring.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbytearray.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qnamespace.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringliteral.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringalgorithms.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringview.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringbuilder.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qpair.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbytearraylist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringlist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qregexp.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringmatcher.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmap.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtextstream.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qiodevice.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobject.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobjectdefs.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcoreevent.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qscopedpointer.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmetatype.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvarlengtharray.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcontainerfwd.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobject_impl.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlocale.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvariant.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qshareddata.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvector.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qpoint.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qset.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcontiguouscache.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsharedpointer.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsharedpointer_impl.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o sqlcontactmodel.o ../SimpleChatApplication/sqlcontactmodel.cpp
+
+sqlconversationmodel.o: ../SimpleChatApplication/sqlconversationmodel.cpp ../SimpleChatApplication/sqlconversationmodel.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/QDateTime \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qdatetime.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstring.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qchar.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qglobal.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qconfig-bootstrapped.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qconfig.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtcore-config.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsystemdetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qprocessordetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcompilerdetection.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtypeinfo.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsysinfo.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlogging.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qflags.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbasicatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qgenericatomic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_cxx11.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qatomic_msvc.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qglobalstatic.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmutex.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qnumeric.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qversiontagging.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbytearray.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qrefcount.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qnamespace.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qarraydata.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringliteral.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringalgorithms.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringview.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringbuilder.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qshareddata.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qhash.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qiterator.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qalgorithms.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qhashfunctions.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qpair.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qbytearraylist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringlist.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qregexp.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qstringmatcher.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/QDebug \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qdebug.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmap.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qtextstream.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qiodevice.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobject.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobjectdefs.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcoreevent.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qscopedpointer.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qmetatype.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvarlengtharray.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcontainerfwd.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qobject_impl.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qlocale.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvariant.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qvector.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qpoint.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qset.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qcontiguouscache.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsharedpointer.h \
+		../../../../Qt/5.12.7/gcc_64/include/QtCore/qsharedpointer_impl.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o sqlconversationmodel.o ../SimpleChatApplication/sqlconversationmodel.cpp
+
 qrc_qml.o: qrc_qml.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_qml.o qrc_qml.cpp
+
+moc_sqlconversationmodel.o: moc_sqlconversationmodel.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_sqlconversationmodel.o moc_sqlconversationmodel.cpp
 
 ####### Install
 
